# MedialAxisShrinkingBall

./: CMakeLists.txt  LICENSE  README.md
data/elephant/: coords.npy  medial_axis_in.xyz  medial_axis_out.xyz  normals.npy
data/hand/: coords.npy  medial_axis_in.xyz  medial_axis_out.xyz  normals.npy
data/holes/: coords.npy  medial_axis_in.xyz  medial_axis_out.xyz  normals.npy
data/sphere/: medial_axis_in.xyz  normals.npy
src/: compute_medial_axis.hpp  io.hpp  masb.cpp  xyz2npy.cpp
